# wmgr

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  README_ja.md  USER_GUIDE.md  build.rs  config.rs  features.md  memo.md  rust-toolchain.toml  uithub_tsrc.txt  upkg.yaml
.github/workflows/: check-glibc.yml  ci.yml  docs.yml  release.yml  test-musl.yml
config/: wmgr-template.yml
crates/wmgr/: Cargo.toml
crates/wmgr-cli/: Cargo.toml  build.rs
crates/wmgr-cli/src/: main.rs
crates/wmgr-cli/src/presentation/cli/: mod.rs
crates/wmgr-cli/src/presentation/cli/commands/: apply_manifest.rs  audit.rs  dump_manifest.rs  foreach.rs  init.rs  log.rs  status.rs  sync.rs
crates/wmgr-cli/src/presentation/ui/: display.rs
crates/wmgr/src/: lib.rs
crates/wmgr/src/application/services/: credential_service.rs  manifest_service.rs  mod.rs
crates/wmgr/src/application/use_cases/: foreach_command.rs  init_workspace.rs  security_audit.rs  status_check.rs  sync_repositories.rs
crates/wmgr/src/common/: error.rs  executor.rs  mod.rs  result.rs  templates.rs
crates/wmgr/src/domain/entities/: credential.rs  mod.rs  repository.rs  workspace.rs  workspace_config.rs
crates/wmgr/src/domain/value_objects/: file_path.rs  file_path_debug.rs  git_url.rs  mod.rs  scm_type.rs
crates/wmgr/src/infrastructure/: http.rs  mod.rs  rclone.rs  s3.rs
crates/wmgr/src/infrastructure/credential/: credential_store.rs
crates/wmgr/src/infrastructure/filesystem/: config_store.rs  manifest_store.rs  mod.rs
crates/wmgr/src/infrastructure/git/: mod.rs
crates/wmgr/src/infrastructure/process/: mod.rs
crates/wmgr/src/infrastructure/scm/: hg_scm.rs  mod.rs  p4_scm.rs  scm_factory.rs
docs/: API_OVERVIEW.md  EXAMPLES.md  MODULES.md  USER_GUIDE.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docs/report/application_layer_completion/: summary.md
docs/report/cargo-toml-creation/: summary.md
docs/report/cleanup-unused-files/: summary.md
docs/report/common-error-rs/: summary.md  troubleshooting.md
docs/report/common-executor-rs/: summary.md
docs/report/common-result-rs/: troubleshooting.md
docs/report/crates-workspace/: summary.md
docs/report/credential-system/: summary.md
docs/report/directory-structure-creation/: summary.md
docs/report/gdrive-auto-auth/: summary.md
docs/report/http-download-feature/: summary.md
docs/report/infrastructure_layer_completion/: summary.md
docs/report/infrastructure_process_completion/: summary.md
docs/report/linux-musl-support/: summary.md
docs/report/manifest-entity/: summary.md
docs/report/manifest-file-support-enhancement/: summary.md
docs/report/manifest-update-process/: summary.md
docs/report/new-scm-types/: summary.md
docs/report/pr-review-fixes/: summary.md
docs/report/remote-configuration-updates/: summary.md
docs/report/s3-sdk-migration/: summary.md
docs/report/status_check_implementation/: summary.md
docs/report/status_check_use_case/: summary.md
docs/report/sync-subdirectory-support/: summary.md
docs/report/tsrc-to-wmgr-rename/: summary.md
docs/report/workspace-entity/: summary.md
docs/wmgr/: all.html  index.html  sidebar-items.js
examples/: README.md  command_executor_usage.rs  individual-scm-config.yaml  individual-scm-guide.md  manifest_http_download.yml  manifest_service_usage.rs  manifest_store_usage.rs  mixed-scm-workspace.yaml  perforce-workspace.yaml  scm-override-patterns.yaml  svn-only-workspace.yaml
old/src/: cli.rs  main.rs
scripts/: build-releases.sh  dev-build.sh  generate-docs.sh  install.ps1  install.sh
src/: lib.rs  main.rs  sync_command.rs
src/application/: mod.rs
src/common/: error.rs  executor.rs  mod.rs  result.rs  templates.rs
src/infrastructure/: http.rs  mod.rs
src/presentation/: mod.rs
templates/: wmgr-individual-scm.yaml  wmgr.yaml
test_dir/: manifest.yml
tests/: http_download_test.rs  integration_command_execution.rs  integration_git_operations.rs  integration_manifest_processing.rs  integration_workspace_lifecycle.rs  test_helpers_integration.rs
tests/common/: assertion_helpers.rs  mock_services.rs  mod.rs  test_fixtures.rs  test_helpers.rs
v2/: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  features.md  manifest.yml  test_manifest_path.rs
v2/.cargo/: config.toml
v2/.github/workflows/: ci.yml  release.yml
v2/.tsrc/: config.yml  manifest.yml
v2/docs/: CHANGELOG.md  CONTRIBUTING.md
v2/docs/report/branch-synchronization/: summary.md
v2/docs/report/cargo_audit_integration/: summary.md
v2/docs/report/common-executor-rs/: troubleshooting.md
v2/docs/report/common-result-rs/: summary.md
v2/docs/report/init_workspace_use_case/: summary.md
v2/docs/report/missing-repository-cloning/: summary.md
v2/docs/report/parallel_processing_optimization/: summary.md
v2/docs/report/repository-entity/: summary.md
v2/docs/report/sync_repositories_use_case/: summary.md
v2/docs/report/unit-tests/: troubleshooting.md
v2/examples/: command_executor_usage.rs  manifest_store_usage.rs
v2/src/: lib.rs  main.rs
v2/src/application/services/: manifest_service.rs  mod.rs
v2/src/application/use_cases/: foreach_command.rs  init_workspace.rs  mod.rs  security_audit.rs  status_check.rs  sync_repositories.rs
v2/src/common/: error.rs  executor.rs  mod.rs  result.rs
v2/src/domain/entities/: manifest.rs  mod.rs  repository.rs  workspace.rs
v2/src/domain/value_objects/: branch_name.rs  file_path.rs  git_url.rs  mod.rs
v2/src/infrastructure/: mod.rs
v2/src/infrastructure/filesystem/: config_store.rs  mod.rs
v2/src/infrastructure/git/: mod.rs  remote.rs  repository.rs
v2/src/infrastructure/process/: mod.rs
v2/src/presentation/cli/: mod.rs
v2/src/presentation/cli/commands/: apply_manifest.rs  audit.rs  dump_manifest.rs  foreach.rs  init.rs  log.rs  mod.rs  status.rs  sync.rs
v2/src/presentation/ui/: mod.rs
v2/tests/: integration_manifest_processing.rs  integration_workspace_lifecycle.rs  test_helpers_integration.rs
v2/tests/common/: assertion_helpers.rs  mock_services.rs  mod.rs  test_helpers.rs
(+348 files in other folders)
