[workspace]
members = [
    "crates/wmgr",
    "crates/wmgr-cli",
]
resolver = "2"

[workspace.metadata]
repository = "https://github.com/tk-aria/wmgr"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
debug-assertions = false
incremental = false

[profile.dev]
opt-level = 0
debug = true
incremental = true
overflow-checks = true
debug-assertions = true

[profile.test]
opt-level = 1
debug = true
incremental = true
overflow-checks = true

[profile.bench]
opt-level = 3
debug = false
lto = "thin"
codegen-units = 1
strip = true
