[package]
name = "tsrc"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
authors = ["tsrc-rust contributors"]
description = "Manage groups of git repositories"
repository = "https://github.com/tk-aria/wmgr"
license = "BSD-3-Clause"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Git operations
git2 = "0.18"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal UI
console = "0.15"
indicatif = "0.17"
colored = "2.1"

# Path handling
pathdiff = "0.2"
walkdir = "2.4"

# HTTP client (for downloading manifests)
reqwest = { version = "0.11", features = ["blocking", "json"] }

# URL parsing
url = "2.5"

# Parallel processing
rayon = "1.8"

# Configuration validation
validator = { version = "0.18", features = ["derive"] }

# Regular expressions
regex = "1.10"

# Date/time handling
chrono = "0.4"

[dev-dependencies]
# Testing
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
mockall = "0.12"
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true