[package]
name = "wmgr-cli"
version = "1.0.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["wmgr contributors"]
description = "CLI for wmgr - manage groups of git repositories"
repository = "https://github.com/tk-aria/wmgr"
license = "BSD-3-Clause"

[[bin]]
name = "wmgr"
path = "src/main.rs"

[dependencies]
wmgr = { path = "../wmgr" }

# CLI framework
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal UI
console = "0.15"
indicatif = "0.17"
colored = "2.1"
atty = "0.2"

# Serialization (for status output)
serde_json = "1.0"
serde_yaml = "0.9"

# Git operations (used by log command)
git2 = { version = "0.18", default-features = false, features = ["https", "vendored-openssl"] }

# Date/time handling (used by log command)
chrono = "0.4"

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10"
